--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=!, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
     <script defer src="script/script.js"></script>
@@ -13,9 +15,9 @@
     <main class="container">
         <h1>Lista zadań</h1>
         <section class="section">
-            <h2>Dodaj nowe zadanie</h2>
-            <div>
-                <form class="js-form">
+            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <div class="section__item">
+                <form class=" form js-form">
                     <input class="js-newTask">
                     <button>Dodaj zadanie</button>
                 </form>
@@ -23,8 +25,8 @@
         </section>
         
         <section class="section">
-            <h2>Lista zadań</h2>
-            <div>
+            <h2 class="section__header">Lista zadań</h2>
+            <div class="section__item">
                 <ul class="js-tasks"></ul>
             </div>
         </section>
