--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1>Lista zadań</h1>
         <section class="section">
             <h2 class="section__header">Dodaj nowe zadanie</h2>
-            <div class="section__item">
+            <div class="section__body">
                 <form class=" form js-form">
-                    <input class="js-newTask">
+                    <input class="newTask js-newTask">
                     <button>Dodaj zadanie</button>
                 </form>
             </div>
@@ -26,8 +26,8 @@
         
         <section class="section">
             <h2 class="section__header">Lista zadań</h2>
-            <div class="section__item">
-                <ul class="js-tasks"></ul>
+            <div class="section__body">
+                <ul class="tasksList js-tasksList"></ul>
             </div>
         </section>
     </main>
