--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/button.css">
     <script defer src="script/script.js"></script>
 </head>
 <body class="body">
