--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="section__body">
                 <form class=" form js-form">
                     <input class="newTask js-newTask">
-                    <button>Dodaj zadanie</button>
+                    <button class="form__button">Dodaj zadanie</button>
                 </form>
             </div>
         </section>
