--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="style/container.css">
+    <link rel="stylesheet" href="style/section.css">
     <link rel="stylesheet" href="style/button.css">
 
     <script defer src="script/script.js"></script>
