--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="style/container.css">
     <link rel="stylesheet" href="style/section.css">
+    <link rel="stylesheet" href="style/form.css">
     <link rel="stylesheet" href="style/button.css">
 
     <script defer src="script/script.js"></script>
