--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style/container.css">
     <link rel="stylesheet" href="style/section.css">
     <link rel="stylesheet" href="style/form.css">
+    <link rel="stylesheet" href="style/tasks.css">
     <link rel="stylesheet" href="style/button.css">
 
     <script defer src="script/script.js"></script>
