--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=!, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="style/container.css">
@@ -14,9 +15,9 @@
     <link rel="stylesheet" href="style/form.css">
     <link rel="stylesheet" href="style/tasks.css">
     <link rel="stylesheet" href="style/button.css">
-
     <script defer src="script/script.js"></script>
 </head>
+
 <body class="body">
     <main class="container">
         <h1>Lista zadań</h1>
@@ -29,7 +30,6 @@
                 </form>
             </div>
         </section>
-        
         <section class="section">
             <h2 class="section__header">Lista zadań</h2>
             <div class="section__body">
@@ -37,6 +37,6 @@
             </div>
         </section>
     </main>
-    
 </body>
+
 </html>
