--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         </section>
         <section class="section">
             <h2 class="section__header">Lista zadań</h2>
+            <div class="stats">
+            <div class=" js-stats__item"></div>
+            <div class="stats__item js-stats__item2"></div>
+        </div>
             <div class="section__body">
+                
                 <ul class="tasksList js-tasksList"></ul>
             </div>
         </section>
